--- a/publication_types/index.html
+++ b/publication_types/index.html
@@ -7,7 +7,7 @@
 <meta name=generator content="Hugo 0.91.2">
 <meta name=author content="Alaaddin Sabr">
 <meta name=description content="Professor in Computer Science and Engineering">
-<link rel=alternate hreflang=en-us href=https://examplesite.org/publication_types/>
+<link rel=alternate hreflang=en-us href=http://alasidig.github.io/swe-363.github.io/publication_types/>
 <meta name=theme-color content="#4caf50">
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/academicons/1.8.6/css/academicons.min.css integrity="sha256-uFVgMKfistnJAfoCUQigIl+JfUaP47GrRKjf6CTPVmw=" crossorigin=anonymous>
 <link rel=stylesheet href=https://use.fontawesome.com/releases/v5.6.0/css/all.css integrity=sha384-aOkxzJ5uQz7WBObEZcHvV5JvRW3TUc2rNPA7pe3AwnsUohiw1Vj2Rgx2KSOkF5+h crossorigin=anonymous>
@@ -15,19 +15,19 @@
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/styles/github.min.css crossorigin=anonymous title=hl-light>
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/styles/dracula.min.css crossorigin=anonymous title=hl-dark disabled>
 <link rel=stylesheet href="https://fonts.googleapis.com/css?family=Lato:400,700|Open+Sans|Roboto+Mono&display=swap">
-<link rel=stylesheet href=/css/academia.min.18c56bf5da5ceccfdffec5d8793e1804.css>
-<link rel=alternate href=/publication_types/index.xml type=application/rss+xml title=Alaaddin>
-<link rel=feed href=/publication_types/index.xml type=application/rss+xml title=Alaaddin>
-<link rel=manifest href=/site.webmanifest>
-<link rel=icon type=image/png href=/img/icon.png>
-<link rel=apple-touch-icon type=image/png href=/img/icon-192.png>
-<link rel=canonical href=https://examplesite.org/publication_types/>
+<link rel=stylesheet href=/swe-363.github.io/css/academia.min.18c56bf5da5ceccfdffec5d8793e1804.css>
+<link rel=alternate href=/swe-363.github.io/publication_types/index.xml type=application/rss+xml title=Alaaddin>
+<link rel=feed href=/swe-363.github.io/publication_types/index.xml type=application/rss+xml title=Alaaddin>
+<link rel=manifest href=/swe-363.github.io/site.webmanifest>
+<link rel=icon type=image/png href=/swe-363.github.io/img/icon.png>
+<link rel=apple-touch-icon type=image/png href=/swe-363.github.io/img/icon-192.png>
+<link rel=canonical href=http://alasidig.github.io/swe-363.github.io/publication_types/>
 <meta property="twitter:card" content="summary">
 <meta property="og:site_name" content="Alaaddin">
-<meta property="og:url" content="https://examplesite.org/publication_types/">
+<meta property="og:url" content="http://alasidig.github.io/swe-363.github.io/publication_types/">
 <meta property="og:title" content="Publication_types | Alaaddin">
-<meta property="og:description" content="Professor in Computer Science and Engineering"><meta property="og:image" content="https://examplesite.org/img/icon-192.png">
-<meta property="twitter:image" content="https://examplesite.org/img/icon-192.png"><meta property="og:locale" content="en-us">
+<meta property="og:description" content="Professor in Computer Science and Engineering"><meta property="og:image" content="http://alasidig.github.io/swe-363.github.io/img/icon-192.png">
+<meta property="twitter:image" content="http://alasidig.github.io/swe-363.github.io/img/icon-192.png"><meta property="og:locale" content="en-us">
 <title>Publication_types | Alaaddin</title>
 </head>
 <body id=top data-spy=scroll data-target=#TableOfContents data-offset=71>
@@ -53,13 +53,13 @@
 </aside>
 <nav class="navbar navbar-light fixed-top navbar-expand-lg py-0" id=navbar-main>
 <div class=container>
-<a class=navbar-brand href=/>Alaaddin</a>
+<a class=navbar-brand href=/swe-363.github.io/>Alaaddin</a>
 <button type=button class=navbar-toggler data-toggle=collapse data-target=#navbar aria-controls=navbar aria-expanded=false aria-label="Toggle navigation"><span><i class="fas fa-bars"></i></span>
 </button>
 <div class="collapse navbar-collapse" id=navbar>
 <ul class="navbar-nav ml-auto">
 <li class=nav-item>
-<a class=nav-link href=/courses/><span>Courses</span></a>
+<a class=nav-link href=/swe-363.github.io/courses/><span>Courses</span></a>
 </li>
 <li class=nav-item>
 <a class="nav-link js-dark-toggle" href=#><i class="fas fa-moon" aria-hidden=true></i></a>
@@ -81,7 +81,7 @@
 <script src=https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.2.5/jquery.fancybox.min.js integrity="sha256-X5PoE3KU5l+JcX+w09p/wHl9AzK333C4hJ2I9S5mD4M=" crossorigin=anonymous></script>
 <script src=https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/highlight.min.js integrity="sha256-aYTdUrn6Ow1DDgh5JTc3aDGnnju48y/1c8s1dgkYPQ8=" crossorigin=anonymous></script>
 <script>hljs.initHighlightingOnLoad()</script>
-<script src=/js/academia.min.e40e230d9b3dfeac86994156b6388764.js></script>
+<script src=/swe-363.github.io/js/academia.min.e40e230d9b3dfeac86994156b6388764.js></script>
 <div class=container>
 <footer class=site-footer>
 <div class=container>
