--- a/slides/example/index.html
+++ b/slides/example/index.html
@@ -4,13 +4,13 @@
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=generator content="Source Themes academia 4.3.1">
-<link rel=manifest href=/site.webmanifest>
-<link rel=icon type=image/png href=/img/icon.png>
-<link rel=apple-touch-icon type=image/png href=/img/icon-192.png>
-<link rel=canonical href=https://examplesite.org/slides/example/>
+<link rel=manifest href=/swe-363.github.io/site.webmanifest>
+<link rel=icon type=image/png href=/swe-363.github.io/img/icon.png>
+<link rel=apple-touch-icon type=image/png href=/swe-363.github.io/img/icon-192.png>
+<link rel=canonical href=http://alasidig.github.io/swe-363.github.io/slides/example/>
 <title>Slides | Alaaddin</title>
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.8.0/css/reveal.min.css><link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.8.0/css/theme/black.min.css><link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/styles/dracula.min.css crossorigin=anonymous>
-<link rel=stylesheet href=/css/reveal_custom.min.css>
+<link rel=stylesheet href=/swe-363.github.io/css/reveal_custom.min.css>
 <script>var link=document.createElement('link');link.rel='stylesheet',link.type='text/css',link.href=window.location.search.match(/print-pdf/gi)?'https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.8.0/css/print/pdf.css':'https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.8.0/css/print/paper.css',document.getElementsByTagName('head')[0].appendChild(link)</script>
 </head>
 <body>
@@ -121,6 +121,6 @@ $$</p>
 </div>
 <script src=https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.8.0/lib/js/head.min.js></script>
 <script src=https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.8.0/js/reveal.min.js></script>
-<script>window.revealPlugins={dependencies:[{src:'https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.8.0/plugin/markdown/marked.js',condition:function(){return!!document.querySelector('[data-markdown]')}},{src:'https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.8.0/plugin/markdown/markdown.js',condition:function(){return!!document.querySelector('[data-markdown]')}},{src:'https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.8.0/plugin/highlight/highlight.js',async:!0,callback:function(){hljs.initHighlightingOnLoad()}},{src:'https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.8.0/plugin/zoom-js/zoom.js',async:!0},{src:'https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.8.0/plugin/math/math.js',async:!0},{src:'https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.8.0/plugin/print-pdf/print-pdf.js',async:!0},{src:'/js/vendor/reveal.js/plugin/notes/notes.js',async:!0}]};let revealDefaults={center:!0,controls:!0,history:!0,progress:!0,transition:'slide',mouseWheel:!0},revealOptions=Object.assign({},revealDefaults,revealPlugins);Reveal.initialize(revealOptions)</script>
+<script>window.revealPlugins={dependencies:[{src:'https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.8.0/plugin/markdown/marked.js',condition:function(){return!!document.querySelector('[data-markdown]')}},{src:'https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.8.0/plugin/markdown/markdown.js',condition:function(){return!!document.querySelector('[data-markdown]')}},{src:'https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.8.0/plugin/highlight/highlight.js',async:!0,callback:function(){hljs.initHighlightingOnLoad()}},{src:'https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.8.0/plugin/zoom-js/zoom.js',async:!0},{src:'https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.8.0/plugin/math/math.js',async:!0},{src:'https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.8.0/plugin/print-pdf/print-pdf.js',async:!0},{src:'/swe-363.github.io/js/vendor/reveal.js/plugin/notes/notes.js',async:!0}]};let revealDefaults={center:!0,controls:!0,history:!0,progress:!0,transition:'slide',mouseWheel:!0},revealOptions=Object.assign({},revealDefaults,revealPlugins);Reveal.initialize(revealOptions)</script>
 </body>
 </html>
