--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 </div>
 <div class=col-12>
 <div class=text-center>
+<a class="btn btn-outline-dark btn-lg" href=/swe-363.github.io/tags/form-fields/>form-fields</a>
 <a class="btn btn-outline-dark btn-lg" href=/swe-363.github.io/tags/front-end/>front-end</a>
 <a class="btn btn-outline-dark btn-lg" href=/swe-363.github.io/tags/html/>html</a>
 <a class="btn btn-outline-dark btn-lg" href=/swe-363.github.io/tags/semantic-tags/>semantic-tags</a>
