deploy: 4e31668a07e5f0ad68dac7072b4f94b484153829

--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=generator content="Source Themes Academia 4.3.1">
-<meta name=generator content="Hugo 0.92.0">
+<meta name=generator content="Hugo 0.92.1">
 <meta name=author content="Alaaddin Sabr">
 <meta name=description content="Professor in Computer Science and Engineering">
 <link rel=alternate hreflang=en-us href=http://alasidig.github.io/swe-363.github.io/404.html>
@@ -73,6 +73,7 @@
 <ul>
 <li><a href=/swe-363.github.io/courses/swe363/html/basics/>HTML Basics</a></li>
 <li><a href=/swe-363.github.io/courses/swe363/html/advanced/>HTML Advanced</a></li>
+<li><a href=/swe-363.github.io/courses/swe363/css/css_basics/>CSS Basics</a></li>
 <li><a href=/swe-363.github.io/talk/coding/>Coding and Analyzing Qualitative Data</a></li>
 <li><a href=/swe-363.github.io/talk/qualitative/>Qualitative Research Summer Intensive</a></li>
 <li><a href=/swe-363.github.io/talk/synthesizing/>Synthesizing Qualitative Data</a></li>
