deploy: fcac39f223a5f21b735f5c09a153c3446eb9ed5d

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=generator content="Source Themes Academia 4.3.1">
-<meta name=generator content="Hugo 0.92.1">
+<meta name=generator content="Hugo 0.92.2">
 <meta name=author content="Alaaddin Sabr">
 <meta name=description content="Professor in Computer Science and Engineering">
 <link rel=alternate hreflang=en-us href=http://alasidig.github.io/swe-363.github.io/>
@@ -98,6 +98,8 @@
 <a class="btn btn-outline-dark btn-lg" href=/swe-363.github.io/tags/form-fields/>form-fields</a>
 <a class="btn btn-outline-dark btn-lg" href=/swe-363.github.io/tags/front-end/>front-end</a>
 <a class="btn btn-outline-dark btn-lg" href=/swe-363.github.io/tags/html/>html</a>
+<a class="btn btn-outline-dark btn-lg" href=/swe-363.github.io/tags/js/>JS</a>
+<a class="btn btn-outline-dark btn-lg" href=/swe-363.github.io/tags/js-events/>JS Events</a>
 <a class="btn btn-outline-dark btn-lg" href=/swe-363.github.io/tags/semantic-tags/>semantic-tags</a>
 </div>
 </div>
