--- a/courses/swe363/html/basics/index.html
+++ b/courses/swe363/html/basics/index.html
@@ -4,7 +4,7 @@
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=generator content="Source Themes Academia 4.3.1">
-<meta name=generator content="Hugo 0.92.1">
+<meta name=generator content="Hugo 0.92.2">
 <meta name=author content="Alaaddin Sabr">
 <meta name=description content="The basic tags in HTML.">
 <link rel=alternate hreflang=en-us href=http://alasidig.github.io/swe-363.github.io/courses/swe363/html/basics/>
@@ -88,6 +88,9 @@
 </div>
 <div class=docs-toc-item>
 <a class=docs-toc-link href=/swe-363.github.io/courses/swe363/css/css_basics/>CSS Basics</a>
+</div>
+<div class=docs-toc-item>
+<a class=docs-toc-link href=/swe-363.github.io/courses/swe363/js/events/>JS Events</a>
 </div>
 </nav>
 </div>
