--- a/courses/swe363/index.html
+++ b/courses/swe363/index.html
@@ -4,7 +4,7 @@
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=generator content="Source Themes Academia 4.3.1">
-<meta name=generator content="Hugo 0.92.1">
+<meta name=generator content="Hugo 0.92.2">
 <meta name=author content="Alaaddin Sabr">
 <meta name=description content="Fundamentals of web and mobile applications and how they impact people’s lives; Building responsive front-end web and mobile apps; Back-end programming of dynamic and data-driven websites; Development frameworks for web and mobile apps; Security issues of web applications; Practical applications to real-world problems.">
 <link rel=alternate hreflang=en-us href=http://alasidig.github.io/swe-363.github.io/courses/swe363/>
@@ -89,6 +89,9 @@
 </div>
 <div class=docs-toc-item>
 <a class=docs-toc-link href=/swe-363.github.io/courses/swe363/css/css_basics/>CSS Basics</a>
+</div>
+<div class=docs-toc-item>
+<a class=docs-toc-link href=/swe-363.github.io/courses/swe363/js/events/>JS Events</a>
 </div>
 </nav>
 </div>
