deploy: ad147c025009d90ec7004ef3acb8c569b1931fcb

--- a/404.html
+++ b/404.html
@@ -75,6 +75,7 @@
 <li><a href=/swe-363.github.io/courses/swe363/html/advanced/>HTML Advanced</a></li>
 <li><a href=/swe-363.github.io/courses/swe363/css/css_basics/>CSS Basics</a></li>
 <li><a href=/swe-363.github.io/courses/swe363/js/events/>JS Events</a></li>
+<li><a href=/swe-363.github.io/courses/swe363/js/dom/>DOM Manipulation</a></li>
 <li><a href=/swe-363.github.io/talk/coding/>Coding and Analyzing Qualitative Data</a></li>
 <li><a href=/swe-363.github.io/talk/qualitative/>Qualitative Research Summer Intensive</a></li>
 <li><a href=/swe-363.github.io/talk/synthesizing/>Synthesizing Qualitative Data</a></li>
