--- a/courses/swe363/js/events/index.html
+++ b/courses/swe363/js/events/index.html
@@ -92,6 +92,9 @@
 <div class="docs-toc-item active">
 <a class=docs-toc-link href=/swe-363.github.io/courses/swe363/js/events/>JS Events</a>
 </div>
+<div class=docs-toc-item>
+<a class=docs-toc-link href=/swe-363.github.io/courses/swe363/js/dom/>DOM Manipulation</a>
+</div>
 </nav>
 </div>
 <div class="d-none d-xl-block col-xl-2 docs-toc">
@@ -470,6 +473,10 @@ Expand
 <div class=post-nav-item>
 <div class=meta-nav>Previous</div>
 <a href=/swe-363.github.io/courses/swe363/css/css_basics/ rel=next>CSS Basics</a>
+</div>
+<div class=post-nav-item>
+<div class=meta-nav>Next</div>
+<a href=/swe-363.github.io/courses/swe363/js/dom/ rel=prev>DOM Manipulation</a>
 </div>
 </div>
 </div>
