--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 <a class="btn btn-outline-dark btn-lg" href=/swe-363.github.io/tags/front-end/>front-end</a>
 <a class="btn btn-outline-dark btn-lg" href=/swe-363.github.io/tags/html/>html</a>
 <a class="btn btn-outline-dark btn-lg" href=/swe-363.github.io/tags/js/>JS</a>
+<a class="btn btn-outline-dark btn-lg" href=/swe-363.github.io/tags/js-dom/>JS DOM</a>
 <a class="btn btn-outline-dark btn-lg" href=/swe-363.github.io/tags/js-events/>JS Events</a>
 <a class="btn btn-outline-dark btn-lg" href=/swe-363.github.io/tags/semantic-tags/>semantic-tags</a>
 </div>
