--- a/courses/swe363/html/basics/index.html
+++ b/courses/swe363/html/basics/index.html
@@ -92,6 +92,9 @@
 <div class=docs-toc-item>
 <a class=docs-toc-link href=/swe-363.github.io/courses/swe363/js/events/>JS Events</a>
 </div>
+<div class=docs-toc-item>
+<a class=docs-toc-link href=/swe-363.github.io/courses/swe363/js/dom/>DOM Manipulation</a>
+</div>
 </nav>
 </div>
 <div class="d-none d-xl-block col-xl-2 docs-toc">
